# OpenGS

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build_linux.sh  build_windows.bat
App/: AppConfig.h.in  CMakeLists.txt  main.cpp
App/include/: Image.h  Texture.h
App/source/: Image.cpp  Texture.cpp  main.cpp
FMath/: CMakeLists.txt  FMath.cpp  FMath.h  MathConfig.h.in
Graphics/: CMakeLists.txt  gsGraphicsConfig.h.in
Graphics/include/: gsColor.h  gsTriangle.h  gsVertex.h
Graphics/source/: gsColor.cpp  gsTriangle.cpp  gsVertex.cpp
Math/: CMakeLists.txt  gsMathConfig.h.in
Math/include/: gsMath.h  gsTypes.h  gsVector3.h
Math/source/: gsMath.cpp  gsVector3.cpp
